--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,20 +1,28 @@
 body {
-  -ms-grid-columns: 66% 34%;
-  grid-template-columns: 66% 34%;
+  -ms-grid-columns: 1fr 2fr;
+  grid-template-columns: 1fr 2fr;
   -ms-grid-rows: auto;
   grid-template-rows: auto;
   display: -ms-grid;
   display: grid;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: start;
 }
 header {
   background: #B209B2;
-  -ms-grid-row-span: 2;
-  grid-column: span 2;
+  padding: 30px;
+  margin-bottom: 20px;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
   -ms-grid-row: 1;
   grid-row: 1;
 }
 section {
   background: #0EFFDA;
+  padding: 30px;
+  margin-left: 20px;
   -ms-grid-column: 2;
   grid-column: 2;
   -ms-grid-row: 2;
@@ -22,15 +30,20 @@ section {
 }
 aside {
   background: #FFC800;
+  padding: 30px;
   -ms-grid-column: 1;
   grid-column: 1;
   -ms-grid-row: 2;
   grid-row: 2;
+  -ms-grid-row-align: start;
 }
 footer {
-  background: #220b53;
+  background: #796ae5;
+  padding: 30px;
+  margin-top: 20px;
   -ms-grid-column: 1;
-  grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
   -ms-grid-row: 3;
   grid-row: 3;
 }
