replaced align-items with align-self

--- a/less/all.less
+++ b/less/all.less
@@ -1,7 +1,7 @@
 body {
+  display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: auto;
-  display: grid;
   align-items: start;
 }
 
@@ -29,7 +29,7 @@ aside {
 
   grid-column: 1;
   grid-row: 2;
-  -ms-grid-row-align: start;
+  align-self: start;
 }
 
 footer {
