--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,10 +1,10 @@
 body {
+  display: -ms-grid;
+  display: grid;
   -ms-grid-columns: 1fr 2fr;
   grid-template-columns: 1fr 2fr;
   -ms-grid-rows: auto;
   grid-template-rows: auto;
-  display: -ms-grid;
-  display: grid;
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: start;
@@ -35,7 +35,9 @@ aside {
   grid-column: 1;
   -ms-grid-row: 2;
   grid-row: 2;
+  -ms-flex-item-align: start;
   -ms-grid-row-align: start;
+  align-self: start;
 }
 footer {
   background: #796ae5;
